<resources>
    <string name="app_name">MyApplication</string>

    <string name="user_code">用户名</string>
    <string name="user_name">姓名</string>
    <string name="user_sex">性别</string>
    <string name="user_password">密码</string>
    <string name="user_password_again">确认密码</string>
    <string name="user_phone">手机号</string>
    <string name="user_address">地址</string>
    <string name="user_project">所属项目</string>
    <string name="user_type">工种</string>
    <string name="user_grade">等级</string>
    <string name="user_number">岗位证书/编号</string>
    <string name="user_id_code">身份证号码</string>
    <string name="user_d">开户行</string>
    <string name="user_bank_code">银行卡号码</string>
    <string name="user_bank_address">开户行</string>
    <string name="user_contract_number">劳动合同编号</string>

    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>

    <string name="submit">提交</string>
    <string name="save">保存</string>

    <string name="main">首页</string>
    <string name="admin_user_manager">员工信息管理</string>
    <string name="admin_user_work">员工考勤</string>
    <string name="admin_user_register">注册审核</string>
    <string name="admin_user_examine">工程计量人工结算</string>
    <string name="admin_user_finish">员工结付申请</string>

    <string name="user_info">个人信息</string>
    <string name="contract_doc">劳动合同书</string>

    <string name="id_check">身份验证</string>

    <string name="open_album">打开相册</string>

    <string name="upload_contract">上传我的合同书</string>
    <string name="download_contract">下载模版</string>
    <string name="contract_name">农民工劳动合同书范本</string>

    <string name="work_team_name">队组名称</string>
    <string name="work_unit">计量单位</string>
    <string name="work_plan">合同计划工程量</string>
    <string name="work_actual">实际完成工程量</string>
    <string name="work_price">劳务单价</string>
    <string name="work_finish_price">应结算金额</string>

    <string name="finish_day_num">出勤工日/完成工程量</string>
    <string name="finish_day_price">日工资/单价</string>
    <string name="finish_sum">工资总额</string>
    <string name="finish_type">申请类别</string>
    <string name="finish_time">结算日期</string>
    <string name="finish_last_update_time">最后修改日期</string>

    <string-array name="sex">
        <item>男</item>
        <item>女</item>
    </string-array>

    <string-array name="finish_type">
        <item>人工费</item>
        <item>材料费</item>
        <item>机械费</item>
    </string-array>
    
    <string-array name="attendance">
        <item>出勤 Y</item>
        <item>事假 H</item>
        <item>旷工 X</item>
    </string-array>

    <string name="project">项目</string>
    <string name="attendance">考勤状态</string>
</resources>